# ros2_ws

./: .gitignore  Apostila Técnica_ Projeto robodog2 e Plataforma ROSMASTER X3.md  CLAUDE.md  README.md  workspace_readmes_summary.md
laserscan_to_point_pulisher/: README.md
laserscan_to_point_pulisher/laserscan_to_point_pulisher/: laserscan_to_point_publish.py
robot_pose_publisher/robot_pose_publisher/: robot_pose_publisher.py
yahboom_app_save_map/: README.md
yahboom_app_save_map/launch/: yahboom_app_save_map.launch.py
yahboom_app_save_map/yahboom_app_save_map/: yahboom_app_save_map.py  yahboom_app_save_map_client.py
yahboom_web_savmap_interfaces/: CMakeLists.txt  README.md  package.xml
yahboomcar_astra/: README.md
yahboomcar_astra/launch/: colorTracker_X3.launch.py
yahboomcar_astra/yahboomcar_astra/: astra_common.py  colorHSV.py  colorTracker.py
yahboomcar_base_node/: CMakeLists.txt  README.md
yahboomcar_base_node/src/: base_node_R2.cpp  base_node_X3.cpp  base_node_x1.cpp  talker.cpp
yahboomcar_bringup/: README.md
yahboomcar_bringup/launch/: yahboomcar_bringup_R2_launch.py  yahboomcar_bringup_X1_launch.py  yahboomcar_bringup_X3_launch.py
yahboomcar_bringup/param/: imu_filter_param.yaml
yahboomcar_bringup/yahboomcar_bringup/: Ackman_driver_R2.py  Mcnamu_driver_X3.py  Mcnamu_driver_x1.py  calibrate_angular_R2.py  calibrate_angular_X3.py  calibrate_linear_R2.py  calibrate_linear_X3.py  patrol_4ROS.py  patrol_4ROS_R2.py  patrol_a1_R2.py  patrol_a1_X3.py  transform_utils.py
yahboomcar_ctrl/: README.md
yahboomcar_ctrl/launch/: keyboart_ctrl_launch-Copy1.py  yahboomcar_joy_launch.py
yahboomcar_ctrl/yahboomcar_ctrl/: yahboom_joy_R2.py  yahboom_joy_X3.py  yahboom_keyboard.py
yahboomcar_description/: README.md  setup.py
yahboomcar_description/launch/: display_R2.launch.py  display_X3.launch.py
yahboomcar_description/urdf/: yahboomcar_X3.urdf.xacro
yahboomcar_description_x1/: README.md
yahboomcar_laser/: README.md  package.xml  setup.py
yahboomcar_laser/launch/: laser_Avoidance_a1_X3.launch.py  laser_Tracker_a1_X3.launch.py  laser_Warning_a1_X3.launch.py
yahboomcar_laser/yahboomcar_laser/: common.py  laser_Avoidance_4ROS.py  laser_Avoidance_4ROS_R2.py  laser_Avoidance_a1_R2.py  laser_Avoidance_a1_X3.py  laser_Tracker_4ROS.py  laser_Tracker_4ROS_R2.py  laser_Tracker_a1_R2.py  laser_Tracker_a1_X3.py  laser_Warning_a1_X3.py
yahboomcar_linefollow/: README.md
yahboomcar_linefollow/launch/: linefollow_X3.launch.py
yahboomcar_linefollow/yahboomcar_linefollow/: follow_common.py  follow_line_4ROS_R2.py  follow_line_a1_R2.py  follow_line_a1_X3.py
yahboomcar_mediapipe/: README.md
yahboomcar_mediapipe/launch/: mediapipe_points.launch.py
yahboomcar_mediapipe/yahboomcar_mediapipe/: 01_HandDetector.py  02_PoseDetector.py  03_Holistic.py  04_FaceMesh.py  05_FaceEyeDetection.py  06_FaceLandmarks.py  07_FaceDetection.py  08_Objectron.py  09_VirtualPaint.py  10_HandCtrl.py  11_GestureRecognition.py  test_msg.py  untitled.py
yahboomcar_msgs/: CMakeLists.txt  README.md  package.xml
yahboomcar_msgs/msg/: ImageMsg.msg  PointArray.msg  Position.msg  Target.msg  TargetArray.msg
yahboomcar_nav/: README.md  package.xml  setup.py
yahboomcar_nav/launch/: cartographer_launch.py  display_map_launch.py  display_nav_launch.py  display_rtabmap_map_launch.py  display_rtabmap_nav_launch.py  laser_bringup_launch.py  map_cartographer_launch.py  map_gmapping_4ros_s2_launch.py  map_gmapping_a1_launch.py  map_gmapping_launch.py  map_rtabmap_launch.py  navigation_dwa_launch.py  navigation_rtabmap_launch.py  navigation_teb_launch.py  occupancy_grid_launch.py  rtabmap_localization_launch.py  rtabmap_nav_launch.py  rtabmap_sync_launch.py  rtabmap_viz_launch.py  save_map_launch.py
yahboomcar_nav/maps/: yahboomcar.yaml
yahboomcar_nav/params/: dwa_nav_params.yaml  lds_2d.lua  rbd_sim_dwa_params.yaml  rbd_slam_toolbox_params.yaml  rtabmap_nav_params.yaml  teb_nav_params.yaml
yahboomcar_nav/yahboomcar_nav/: scan_filter.py
yahboomcar_visual/: README.md
yahboomcar_visual/detection/: target_detection.py
yahboomcar_visual/simple_qrcode/: QRcode_Create.py  QRcode_Parsing.py
yahboomcar_visual/yahboomcar_visual/: astra_color_point.py  astra_depth_image.py  astra_image_flip.py  astra_rgb_image.py  laser_to_image.py  pub_image.py  simple_AR.py
yahboomcar_voice_ctrl/: README.md
yahboomcar_voice_ctrl/yahboomcar_voice_ctrl/: Voice_Ctrl_Ackman_driver.py  Voice_Ctrl_Mcnamu_driver_X3.py  Voice_Ctrl_colorHSV.py  Voice_Ctrl_colorTracker.py  Voice_Ctrl_follow_line_4ROS_R2.py  Voice_Ctrl_follow_line_a1_R2.py  Voice_Ctrl_follow_line_a1_X3.py  astra_common.py  colorHSV.py  follow_common.py  voice_Ctrl_color_identify.py  voice_Ctrl_send_mark.py
